--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
+Imports:
+    xaringan,
+    xaringanthemer
+URL: https://github.com/uf-repro/data-organization
