fix line ending?

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,4 @@ RoxygenNote: 7.1.0
 Imports:
     xaringan,
     xaringanthemer
-URL: https://github.com/uf-repro/data-organization
+URL: https://uf-repro.github.io/publishing-interim-products/
