--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,6 +40,11 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
+      - name: Render slides
+        run: |
+          rmarkdown::render("slides/slides.Rmd")
+        shell: Rscript {0}
+
       - name: Deploy package
         run: pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
